--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>Marvel Heroes</title>
+    <title>Marvel Superheroes</title>
   </head>
 <body>
   <div id="app">
